# libver

./: Cargo.toml
.github/: available-2.json  available-3.json
projects/crates-name/: Cargo.toml
projects/crates-name/src/: lib.rs
projects/crates-name/src/utils/: mod.rs
projects/crates-name/src/windows/: mod.rs
projects/ver-cli/: Cargo.toml
projects/ver-cli/src/: main.rs
projects/ver-cli/src/clone/: mod.rs
projects/ver-cli/src/fork/: mod.rs  readme.md
projects/ver-cli/src/new/: mod.rs
projects/ver-cli/src/utils/: mod.rs
projects/ver-client/: Cargo.toml
projects/ver-client/src/: lib.rs  main.rs
projects/ver-client/src/git_compatible/: mod.rs
projects/ver-core/: Cargo.toml
projects/ver-core/src/utils/: mod.rs
projects/ver-types/: Cargo.toml
projects/ver-types/src/git_compatible/: readme.md
projects/ver-types/src/nodes/: mod.rs
