[package]
name = "crates-name"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "..."
repository = "https://github.com/oovm/sub_projects"
documentation = "https://docs.rs/sub_projects"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
clap = "4.1.4"
itertools = "0.10.5"
serde_json = "1.0.91"

[dependencies.diagnostic-quick]
version = "0.3.6"
features = ["walkdir", "serde_json"]


[dev-dependencies]

[features]
default = []
