[package]
name = "ver-cli"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "..."
repository = "https://github.com/oovm/sub_projects"
documentation = "https://docs.rs/sub_projects"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"


[[bin]]
name = "ver"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
itertools = "0.10.5"
serde_json = "1.0.89"
tokio = { version = "1.23.0", features = ["full"] }

[dependencies.diagnostic-quick]
version = "0.2.9"
features = ["walkdir", "serde_json", "url"]


[dev-dependencies]

[features]
default = []
